--- a/views/cv.jade
+++ b/views/cv.jade
@@ -8,12 +8,29 @@ doctype html
     ul.p-adr
       each line in contact.address
         li= line
-  ul.education Education
+  h2 Education
+  ul.education
     each entry in education
       li.p-education.h-event
-        h1.p-name= entry.summary
+        h3.p-name= entry.summary
         span.dt-start= entry.start
-        | -
+        | &mdash;
         span.dt-end= entry.end
         .p-summary= entry.description
-  .p-experience yes
+  h2 Experience
+  ul.experience
+    each entry in experience
+      li.p-experience.h-event
+        h3.p-name
+          =entry.title
+          |,
+          =entry.employer
+        span.dt-start= entry.start
+        | &mdash;
+        span.dt-end= entry.end
+        .p-summary= entry.description
+        if entry.hats
+          h3 Roles
+          ul.roles
+            each hat in entry.hats
+              li= hat
