--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ a:hover {
     background: #80C18E;
 }
 
-.p-adr li {
+li {
     padding: 0;
     list-style-type: none;
 }
@@ -122,10 +122,14 @@ a {
     max-height: 0;
     overflow: hidden;
     transition: 0.3s;
+    padding-left: 9px;
+    margin-left: 7px;
+    border-left: 1px solid #2A853E;
 }
 
 .product .title:before {
     content: "▲";
+    color: #2A853E;
 }
 
 .product.visible .summary {
