--- a/views/cv.jade
+++ b/views/cv.jade
@@ -3,6 +3,7 @@ meta(name="viewport" content="width=device-width, initial-scale=1")
 link(href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css")
 link(href='//fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css')
 link(rel="stylesheet" type="text/css" href="style.css")
+link(rel="stylesheet" type="text/css" href="large.css")
 link(rel="stylesheet" type="text/css" href="print.css")
 script(src="jquery-1.11.3.min.js")
 script(src="cv.js")
