Made product expand arrows more consistent on different browsers.

--- a/static/style.css
+++ b/static/style.css
@@ -130,6 +130,10 @@ a {
 .product .title:before {
     content: "▲";
     color: #2A853E;
+    line-height: 0;
+    display: inline-block;
+    width: 16px;
+    text-align: center;
 }
 
 .product.visible .summary {
