--- a/views/cv.jade
+++ b/views/cv.jade
@@ -16,8 +16,10 @@ title
   h1.p-name
     span= contact.name
     |, Curriculum Vitae
+  img.portrait.large(src="portrait.png")
   .section
     .p-summary= summary
+  img.portrait.small(src="portrait_small.png")
   .section
     .p-contact.h-card
       span.p-name= contact.name
