--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@ body {
 h1, h2, h3, h4 {
     font-family: "Roboto", sans-serif;
     margin: 0;
+    clear: right;
 }
 
 h1 {
@@ -22,6 +23,15 @@ h1 {
 .section {
     padding: 5px;
     margin-bottom: 5px;
+}
+
+.portrait {
+    border: 0;
+    float: right;
+}
+
+.portrait.large {
+    display: none;
 }
 
 .timespan {
