--- a/views/cv.jade
+++ b/views/cv.jade
@@ -2,11 +2,11 @@ doctype html
 meta(name="viewport" content="width=device-width, initial-scale=1")
 link(href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css")
 link(href='//fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css')
-link(rel="stylesheet" type="text/css" href="style.css")
-link(rel="stylesheet" type="text/css" href="large.css")
-link(rel="stylesheet" type="text/css" href="print.css")
-script(src="jquery-1.11.3.min.js")
-script(src="cv.js")
+link(rel="stylesheet" type="text/css" href="css/style.css")
+link(rel="stylesheet" type="text/css" href="css/large.css")
+link(rel="stylesheet" type="text/css" href="css/print.css")
+script(src="lib/jquery-1.11.3.min.js")
+script(src="js/cv.js")
 
 title
   | CV - 
@@ -16,10 +16,10 @@ title
   h1.p-name
     span= contact.name
     |, Curriculum Vitae
-  img.portrait.large(src="portrait.png")
+  img.portrait.large(src="img/portrait.png")
   .section
     .p-summary= summary
-  img.portrait.small(src="portrait_small.png")
+  img.portrait.small(src="img/portrait_small.png")
   .section
     .p-contact.h-card
       span.p-name= contact.name
