--- a/views/cv.jade
+++ b/views/cv.jade
@@ -89,3 +89,11 @@ title
   ul.interests.section
     each entry in personal.interests
       li.interest= entry
+
+.bottom.section
+  .button-segment
+    a(href="https://github.com/deestan/cv") view source
+  .button-segment
+    a(href="javascript:window.print()") print page
+  .button-segment
+    a(href="javascript:confirm('Are you sure?')") be annoying
