--- a/static/css/style.css
+++ b/static/css/style.css
@@ -162,8 +162,8 @@ a {
 }
 
 .caret img {
-    width: 15px;
-    height: 15px;
+    max-width: 15px;
+    max-height: 15px;
     transform: rotate(90deg);
     transition: 0.2s;
 }
