--- a/views/cv.jade
+++ b/views/cv.jade
@@ -96,4 +96,4 @@ title
   .button-segment
     a(href="javascript:window.print()") print page
   .button-segment
-    a(href="javascript:confirm('Are you sure?')") be annoying
+    a(href="#{silly.href}")= silly.name
