--- a/static/css/style.css
+++ b/static/css/style.css
@@ -254,7 +254,19 @@ li.technology:last-child .comma {
     100% { background: red }
 }
 
-.woah {
-    animation: woah 1s linear 0 infinite;
-    -webkit-animation: woah 10s linear 0 infinite;
+@-moz-keyframes woah {
+    0%   { background: red }
+    14%  { background: orange }
+    29%  { background: yellow }
+    43%  { background: green }
+    57%  { background: cyan }
+    71%  { background: violet }
+    85%  { background: magenta }
+    100% { background: red }
+}
+
+woah {
+    animation: woah 2s linear 0s infinite;
+    -webkit-animation: woah 2s linear 0s infinite;
+    -moz-animation: woah 2s linear 0s infinite;
 }
