Added link to live version on print.

--- a/static/css/print.css
+++ b/static/css/print.css
@@ -29,4 +29,10 @@
     .bottom {
         display: none;
     }
+
+    .print {
+        border-top: 1px solid black;
+        display: block;
+        text-align: center;
+    }
 }
