--- a/views/cv.jade
+++ b/views/cv.jade
@@ -96,3 +96,7 @@ title
     a(href="#{silly.href}")= silly.name
   .button-segment
     a(href="javascript:window.print()") print page
+
+.print.footer
+  p A prettier, up to date version of this CV is available at: 
+    a(href="https://plyply.com/cv") https://plyply.com/cv
