Added a dragon. Rawr!

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,3 @@
-html {
-    background: #D9EEDE;
-}
-
 body, html, ul, p {
     margin: 0;
     padding: 0;
@@ -9,8 +5,13 @@ body, html, ul, p {
 
 body {
     font-family: 'Slabo 27px', serif;
-    background: #F9FFFE;
+    background: #D9EEDE;
     color: #000601;
+    position: relative;
+}
+
+.column {
+    background: #F9FFFE;
 }
 
 .h-resume {
@@ -207,10 +208,10 @@ li.technology:last-child .comma {
 /* "desktop view" */
 
 @media (min-width: 800px) {
-    body {
+    .column {
         margin-left: auto;
         margin-right: auto;
-        width: 800px;
+        max-width: 800px;
     }
 }
 
@@ -273,4 +274,38 @@ li.technology:last-child .comma {
     animation: woah 2s linear 0s infinite;
     -webkit-animation: woah 2s linear 0s infinite;
     -moz-animation: woah 2s linear 0s infinite;
+}
+
+.dragon {
+    position: absolute;
+    bottom: 0;
+    right: 5px;
+    overflow: hidden;
+    height: 250px;
+    width: 300px;
+    display: none;
+}
+
+.dragon.summoned {
+    display: block;
+}
+
+.dragon img {
+    position: absolute;
+    width: 300px;
+    top: 200px;
+    transition: 0.5s;
+    transform: rotate(35deg);
+    -webkit-transform: rotate(35deg);
+    -moz-transform: rotate(35deg);
+    transition-timing-function: cubic-bezier(0, 1, .75, 1);
+    -webkit-transition-timing-function: cubic-bezier(0, 1, .75, 1);
+    -moz-transition-timing-function: cubic-bezier(0, 1, .75, 1);
+}
+
+.dragon img:hover {
+    top: 0;
+    transform: rotate(0);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
 }
