--- a/views/cv.jade
+++ b/views/cv.jade
@@ -11,7 +11,7 @@ title
   | CV - 
   =contact.name
 
-.h-resume
+.column.h-resume
   h1.p-name
     span= contact.name
     |, Curriculum Vitae
@@ -89,7 +89,7 @@ title
     each entry in personal.interests
       li.interest= entry
 
-.bottom.section
+.column.bottom.section
   .button-segment
     a(href="https://github.com/deestan/cv") view source
   .button-segment
@@ -100,3 +100,6 @@ title
 .print.footer
   p A prettier, up to date version of this CV is available at: 
     a(href="https://plyply.com/cv") https://plyply.com/cv
+
+.dragon
+  img(src="img/omgrun.svg")
