Trimmed off extraneous 5px margin at bottom.

--- a/views/cv.jade
+++ b/views/cv.jade
@@ -89,7 +89,7 @@ title
     each entry in personal.interests
       li.interest= entry
 
-.column.bottom.section
+.column.bottom.section.last
   .button-segment
     a(href="https://github.com/deestan/cv") view source
   .button-segment
